[package]
name = "fml_ast"
version = "0.2.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#serde-lexpr = "0.1.0"
#serde_yaml = "0.8"
#serde_yaml = "0.8"